feat: add anchor in singolo-page

--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -8,6 +8,7 @@ $color-bg-slider2: #648bf0;
 $color-bg-portfolio: #2d303a;
 $color-heading: #666d89;
 $color-border: #767e9e;
+$color-border-hover: #DEDEDE;
 $color-white: #FFFFFF;
 
 $content-width: 936px;
