--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-size: 1,6rem;
+    font-size: 1.6rem;
     color: #767e9e;
 }
 
@@ -18,6 +18,7 @@ h1 {
 }
 
 h2 {
+    margin: 0;
     font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: bold;
