--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,17 +5,32 @@
 }
 
 .header__wrapper {
+    padding: 29px 0 35px 0;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.site_name__wrapper {
+    margin: 0;
+    width: 40%;
+    display: flex;
+    align-items: center;
+}
+
 .site__name {
     color: #FFFFFF;
 }
 
+.star {
+    color:  #f06c64;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 .navigation {
+    padding: 15px 0 0 0;
     display: flex;
     width: 375px;
     justify-content: space-between;
@@ -25,9 +40,22 @@
     line-height: 14px;
     text-align: right;
     letter-spacing: -0.035em;
+    transition: all 0.3s;
+    a {
+        text-decoration: none;
+        color: $color-white;
+        cursor: pointer;
+    }
 
+    a:hover {
+        color:  #f06c64;
+    }
 }
 
 .navigation :first-child {
     list-style: none;
 }
+
+// .navigation__link {
+//     cursor: pointer;
+// }
