--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,7 +1,6 @@
 .portfolio {
     background-color: $color-bg-portfolio;
     border-bottom: 6px solid $color-border-blue;
-    margin: auto;
 }
 
 .portfolio__title {
@@ -15,16 +14,20 @@
 }
 
 .portfolio_images {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     list-style: none;
-    gap: 20px;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 20px;
+    grid-template-rows: auto auto auto;
+    grid-gap: 20px;
 }
 
 .portfolio_images__item {
-    width: 100%;
-    height: auto;
+    width: fit-content;
 }
+
 .button_borderd {
     font-family: 'Lato', sans-serif;
     color: $color-border;
@@ -35,13 +38,17 @@
     cursor: pointer;
 }
 
-.button_borderd:hover {
+.button_borderd:not(.active):hover {
     color: $color-border-hover;
 }
 
-.button_borderd:active {
+.button_borderd_active {
     color: $color-border-hover;
-    border-color: $color-border-hover;
+    border: 1px solid $color-border-hover;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: $color-bg-portfolio;
+    cursor: pointer;
 }
 
 .button_portfolio {
