--- a/sass/style.css
+++ b/sass/style.css
@@ -108,7 +108,10 @@ body {
   color: #FFFFFF;
   cursor: pointer;
 }
-.navigation a:hover {
+.navigation a.active {
+  color: #f06c64;
+}
+.navigation a:not(.active):hover {
   color: #f06c64;
 }
 
@@ -142,7 +145,6 @@ body {
 .portfolio {
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
-  margin: auto;
 }
 
 .portfolio__title {
@@ -156,15 +158,18 @@ body {
 }
 
 .portfolio_images {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
   list-style: none;
-  gap: 20px;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-column-gap: 20px;
+  grid-template-rows: auto auto auto;
+  grid-gap: 20px;
 }
 
 .portfolio_images__item {
-  width: 100%;
-  height: auto;
+  width: fit-content;
 }
 
 .button_borderd {
@@ -177,13 +182,17 @@ body {
   cursor: pointer;
 }
 
-.button_borderd:hover {
+.button_borderd:not(.active):hover {
   color: #DEDEDE;
 }
 
-.button_borderd:active {
+.button_borderd_active {
   color: #DEDEDE;
-  border-color: #DEDEDE;
+  border: 1px solid #DEDEDE;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #2d303a;
+  cursor: pointer;
 }
 
 .button_portfolio {
@@ -203,17 +212,24 @@ body {
 .our-service__title {
   margin: 0;
   padding-top: 59px;
+  font-size: 30px;
+  line-height: 36px;
 }
 
 .our-service__text {
   margin: 0;
+  line-height: 30px;
   padding-top: 12px;
   padding-bottom: 60px;
+  text-align: justify;
 }
 
 .wrapper_layout__text {
   margin: 0;
   padding-left: 12px;
+  line-height: 22px;
+  text-align: justify;
+  overflow: hidden;
 }
 
 .layout__name {
@@ -224,6 +240,8 @@ body {
 .layout__description {
   margin: 0;
   font-size: 1.2rem;
+  text-align: justify;
+  overflow: hidden;
 }
 
 .layout-2-span-3-column__wrapper {
