--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: $content-width;
-    padding: 22px 0;
+  padding: 22px 0;
 }
 
 .ico-networks {
@@ -18,5 +18,5 @@
 
 .ico-networks__link {
     padding-right: 8px;
-    // cursor: pointer;
+    cursor: pointer;
 }
