--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -44,6 +44,14 @@
   line-height: 0;
 }
 
+.phone_vertical__left {
+  padding-left: 25%;
+}
+
+.phone_vertical__right {
+  padding-right: 25%;
+}
+
 .slider {
     position: relative;
     overflow: hidden;
@@ -98,11 +106,11 @@
   }
 
   .slider__control_left::before {
-    background-image: url('img/svg/slider-arows/arrow-left.svg');
+    background-image: url('/img/svg/slider-arows/arrow-left.svg');
   }
 
   .slider__control_right::before {
-    background-image: url('img/svg/slider-arows/arrow-right.svg');
+    background-image: url('/img/svg/slider-arows/arrow-right.svg');
   }
 
   .slider__item>div {
