--- a/sass/style.css
+++ b/sass/style.css
@@ -300,6 +300,14 @@ body {
   line-height: 0;
 }
 
+.phone_vertical__left {
+  padding-left: 25%;
+}
+
+.phone_vertical__right {
+  padding-right: 25%;
+}
+
 .slider {
   position: relative;
   overflow: hidden;
@@ -354,11 +362,11 @@ body {
 }
 
 .slider__control_left::before {
-  background-image: url("img/svg/slider-arows/arrow-left.svg");
+  background-image: url("/img/svg/slider-arows/arrow-left.svg");
 }
 
 .slider__control_right::before {
-  background-image: url("img/svg/slider-arows/arrow-right.svg");
+  background-image: url("/img/svg/slider-arows/arrow-right.svg");
 }
 
 .slider__item > div {
