--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -10,10 +10,6 @@
     transition: transform 0.6s ease;
   }
 
-  // .slider__item {
-  //   position: relative;
-  //   overflow: hidden;
-  // }
 
 // Styles for Slide-Red-1
 
@@ -42,57 +38,10 @@
 .slide-2 {
     width: 1020px;
     height: 594px;
-    background-color: $color-bg-slider2;
+    background-image: url('/img/slide-2/Slide-2.svg');
+    background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
-}
-
-.phone_vertical_top {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    line-height: 0%;
-    position: absolute;
-    background-image: url('/img/slide-2/phone-vertical-top/slider-content-top.svg');
-    background-repeat: no-repeat;
-    z-index: 5;
-    margin-left: 38%;
-    margin-top: 5%;
-}
-
-
-.phone_vertical_left_right {
-    height: 50%;
-    width: 50%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding-left: 30%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-.phone_vertical {
-  display: inline-block;
-  line-height: 0;
-}
-
-.phone_vertical__left {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-image: url('/img/slide-2/phone-vertical-left/slider-content-left.svg');
-  z-index: 1;
-}
-
-.phone_vertical__right {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-image: url('/img/slide-2/phone-vertical-right/slider-content-right.svg');
-  z-index: 1;
 }
 
   // Styles for control-buttons
@@ -132,11 +81,6 @@
 
   .slider__control_left::before {
     background-image: url('/img/svg/slider-arows/arrow-left.svg');
-    z-index: 5;
-  }
-
-  .slider__control_left::before:hover {
-    background-color: aliceblue;
   }
 
   .slider__control_right::before {
