--- a/sass/style.css
+++ b/sass/style.css
@@ -291,7 +291,7 @@ body {
 .slide-2 {
   width: 1020px;
   height: 594px;
-  background-image: url("/img/slide-2/Slide-2.svg");
+  background-image: url("img/slide-2/Slide-2.svg");
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
@@ -331,11 +331,11 @@ body {
 }
 
 .slider__control_left::before {
-  background-image: url("/img/svg/slider-arows/arrow-left.svg");
+  background-image: url("img/svg/slider-arows/arrow-left.svg");
 }
 
 .slider__control_right::before {
-  background-image: url("/img/svg/slider-arows/arrow-right.svg");
+  background-image: url("img/svg/slider-arows/arrow-right.svg");
 }
 
 /*# sourceMappingURL=style.css.map */
