--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -10,6 +10,11 @@
     transition: transform 0.6s ease;
   }
 
+  .slider__item {
+    width: 1020px;
+    height: 594px;
+  }
+
 
 // Styles for Slide-Red-1
 
@@ -20,17 +25,19 @@
     border-bottom: 6px solid $color-border-slider1;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .phone_vertical {
     display: inline-block;
     line-height: 0;
+    padding-left: 111px;
 }
 
 .phone_horizontal {
     display: inline-block;
     line-height: 0;
+    padding-right: 112px;
 }
 
 // Styles for Slide-Blue-2
@@ -38,9 +45,11 @@
 .slide-2 {
     width: 1020px;
     height: 594px;
-    background-image: url('/img/slide-2/Slide-2.svg');
+    display: inline-block;
+    line-height: 0;
+    background-image: url('../img/slide-2/Slide-2.svg');
     background-repeat: no-repeat;
-    position: relative;
+    background-position: bottom;
     overflow: hidden;
 }
 
@@ -55,34 +64,34 @@
     transform: translateY(-50%);
   }
 
-  .slider__control:hover,
-  .slider__control:focus {
-    text-decoration: none;
-  }
+  // .slider__control:hover,
+  // .slider__control:focus {
+  //   text-decoration: none;
+  // }
 
   .slider__control_left {
     left: 0;
-    padding-left: 29px;
+    padding-left: 40px;
   }
 
   .slider__control_right {
     right: 0;
-    padding-right: 27px;
+    padding-right: 40px;
   }
 
   .slider__control::before {
     content: '';
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 27px;
     background: transparent no-repeat center center;
     background-size: 100% 100%;
   }
 
   .slider__control_left::before {
-    background-image: url('/img/svg/slider-arows/arrow-left.svg');
+    background-image: url('../img/svg/slider-arows/arrow-left.svg');
   }
 
   .slider__control_right::before {
-    background-image: url('/img/svg/slider-arows/arrow-right.svg');
+    background-image: url('../img/svg/slider-arows/arrow-right.svg');
   }
