--- a/sass/style.css
+++ b/sass/style.css
@@ -268,6 +268,11 @@ body {
   transition: transform 0.6s ease;
 }
 
+.slider__item {
+  width: 1020px;
+  height: 594px;
+}
+
 .slide-1 {
   width: 1020px;
   height: 588px;
@@ -275,25 +280,29 @@ body {
   border-bottom: 6px solid #EA676B;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .phone_vertical {
   display: inline-block;
   line-height: 0;
+  padding-left: 111px;
 }
 
 .phone_horizontal {
   display: inline-block;
   line-height: 0;
+  padding-right: 112px;
 }
 
 .slide-2 {
   width: 1020px;
   height: 594px;
-  background-image: url("/img/slide-2/Slide-2.svg");
+  display: inline-block;
+  line-height: 0;
+  background-image: url("../img/slide-2/Slide-2.svg");
   background-repeat: no-repeat;
-  position: relative;
+  background-position: bottom;
   overflow: hidden;
 }
 
@@ -306,36 +315,31 @@ body {
   transform: translateY(-50%);
 }
 
-.slider__control:hover,
-.slider__control:focus {
-  text-decoration: none;
-}
-
 .slider__control_left {
   left: 0;
-  padding-left: 29px;
+  padding-left: 40px;
 }
 
 .slider__control_right {
   right: 0;
-  padding-right: 27px;
+  padding-right: 40px;
 }
 
 .slider__control::before {
   content: "";
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 27px;
   background: transparent no-repeat center center;
   background-size: 100% 100%;
 }
 
 .slider__control_left::before {
-  background-image: url("/img/svg/slider-arows/arrow-left.svg");
+  background-image: url("../img/svg/slider-arows/arrow-left.svg");
 }
 
 .slider__control_right::before {
-  background-image: url("/img/svg/slider-arows/arrow-right.svg");
+  background-image: url("../img/svg/slider-arows/arrow-right.svg");
 }
 
 /*# sourceMappingURL=style.css.map */
