--- a/sass/style.css
+++ b/sass/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .header__wrapper {
-  padding: 29px 0 35px 0;
+  height: 89px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -159,6 +159,42 @@ body {
   padding: 13px 0 0 0;
 }
 
+.button_portfolio {
+  padding: 10px 0;
+  display: flex;
+}
+.button_portfolio :active, .button_portfolio :hover, .button_portfolio :focus {
+  outline: 0;
+  outline-offset: 0;
+}
+.button_portfolio .button_borderd {
+  list-style: none;
+  font-family: "Lato", sans-serif;
+  color: #767e9e;
+  border: 1px solid #767e9e;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #2d303a;
+  cursor: pointer;
+}
+.button_portfolio .button_borderd_active {
+  list-style: none;
+  color: #DEDEDE;
+  border: 1px solid #DEDEDE;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #2d303a;
+  cursor: pointer;
+}
+.button_portfolio .button_borderd:not(.active):hover {
+  color: #DEDEDE;
+  border: 1px solid #DEDEDE;
+}
+
+.button_portfolio__item {
+  padding: 0 10px 0 0;
+}
+
 .portfolio_images {
   list-style: none;
   margin: 0;
@@ -173,38 +209,6 @@ body {
 .portfolio_images__item {
   width: auto;
   height: auto;
-}
-
-.button_borderd {
-  font-family: "Lato", sans-serif;
-  color: #767e9e;
-  border: 1px solid #767e9e;
-  box-sizing: border-box;
-  border-radius: 5px;
-  background-color: #2d303a;
-  cursor: pointer;
-}
-
-.button_borderd:not(.active):hover {
-  color: #DEDEDE;
-}
-
-.button_borderd_active {
-  color: #DEDEDE;
-  border: 1px solid #DEDEDE;
-  box-sizing: border-box;
-  border-radius: 5px;
-  background-color: #2d303a;
-  cursor: pointer;
-}
-
-.button_portfolio {
-  padding: 10px 0;
-  display: flex;
-}
-
-.button_portfolio__item {
-  padding: 0 10px 0 0;
 }
 
 .our-services {
