--- a/sass/components/portfolio.scss
+++ b/sass/components/portfolio.scss
@@ -1,4 +1,5 @@
 .portfolio {
+    background-attachment: contain;
     background-color: $color-bg-portfolio;
     border-bottom: 6px solid $color-border-blue;
 }
@@ -18,9 +19,7 @@
 .button_portfolio {
     padding: 10px 0;
     display: flex;
-
-    :active,:hover,:focus{outline:0;outline-offset:0}
-
+    :active,:hover,:focus{outline:0;outline-offset:0}  //off- all buttons browser-styles
     .button_borderd {
     list-style: none;
     font-family: 'Lato', sans-serif;
@@ -33,8 +32,8 @@
     }
 
     .button_borderd_active {
+    :active,:hover,:focus{outline:0;outline-offset:0}
     list-style: none;
-
     color: $color-border-hover;
     border: 1px solid $color-border-hover;
     box-sizing: border-box;
@@ -52,6 +51,7 @@
 
 
 .button_portfolio__item {
+    :active,:hover,:focus{outline:0;outline-offset:0}  //off- all buttons browser-styles
     padding: 0 10px 0 0;
 }
 
@@ -69,6 +69,7 @@
 }
 
 .portfolio_images__item {
+    list-style: none;
     width: auto;
     height: auto;
 }
