--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -6,12 +6,13 @@
   }
 
   .slider__wrapper {
+    // position: absolute;
     display: flex;
     transition: transform 0.6s ease;
   }
 
   .slider__item {
-    width: 1020px;
+    width: auto;
     height: 594px;
   }
 
