--- a/sass/layouts/body.scss
+++ b/sass/layouts/body.scss
@@ -1,5 +1,5 @@
 body {
-    max-width: 1020px;
+    // max-width: 1020px;
     background-color: $color-primary;
     margin: auto;
     padding: 0;
