--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: $content-width;
-  padding: 22px 0;
+    padding: 22px 0;
 }
 
 .ico-networks {
@@ -18,5 +18,11 @@
 
 .ico-networks__link {
     padding-right: 8px;
-    cursor: pointer;
+
+
+}
+
+.svg:hover {
+    filter: inherit;
+    fill: $color-border-hover;
 }
