--- a/sass/style.css
+++ b/sass/style.css
@@ -48,12 +48,11 @@ ul {
 }
 
 .wrapper {
-  max-width: 936px;
+  max-width: 1020px;
   margin: auto;
 }
 
 body {
-  max-width: 1020px;
   background-color: ​ #f2f2f2;
   margin: auto;
   padding: 0;
@@ -129,7 +128,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 936px;
+  max-width: 1020px;
   padding: 22px 0;
 }
 
@@ -141,10 +140,15 @@ body {
 
 .ico-networks__link {
   padding-right: 8px;
-  cursor: pointer;
+}
+
+.svg:hover {
+  filter: inherit;
+  fill: #DEDEDE;
 }
 
 .portfolio {
+  background-attachment: contain;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
@@ -186,6 +190,10 @@ body {
   background-color: #2d303a;
   cursor: pointer;
 }
+.button_portfolio .button_borderd_active :active, .button_portfolio .button_borderd_active :hover, .button_portfolio .button_borderd_active :focus {
+  outline: 0;
+  outline-offset: 0;
+}
 .button_portfolio .button_borderd:not(.active):hover {
   color: #DEDEDE;
   border: 1px solid #DEDEDE;
@@ -193,6 +201,10 @@ body {
 
 .button_portfolio__item {
   padding: 0 10px 0 0;
+}
+.button_portfolio__item :active, .button_portfolio__item :hover, .button_portfolio__item :focus {
+  outline: 0;
+  outline-offset: 0;
 }
 
 .portfolio_images {
@@ -207,6 +219,7 @@ body {
 }
 
 .portfolio_images__item {
+  list-style: none;
   width: auto;
   height: auto;
 }
@@ -273,7 +286,7 @@ body {
 }
 
 .slider__item {
-  width: 1020px;
+  width: auto;
   height: 594px;
 }
 
