--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -58,6 +58,9 @@
 
   .slider__control {
     position: absolute;
+    // height: inherit;
+    // width: inherit;
+    width: 1020px;
     top: 50%;
     display: flex;
     align-items: center;
