--- a/sass/layouts/body.scss
+++ b/sass/layouts/body.scss
@@ -1,5 +1,6 @@
 body {
     // max-width: 1020px;
+    position: relative;
     background-color: $color-primary;
     margin: auto;
     padding: 0;
