--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -1,4 +1,11 @@
 .header {
+    width: 100%;
+    // height: 89px;
+    position: sticky;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 10;
     background-color: $color-bg-header;
     color: $color-white;
     border-bottom: 6px solid $color-border-blue;
