--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -52,6 +52,7 @@
     letter-spacing: -0.035em;
     transition: all 0.3s;
     a {
+        display: block;
         text-decoration: none;
         color: $color-white;
         cursor: pointer;
@@ -63,6 +64,10 @@
 
     a:not(.active):hover {
         color:  #f06c64;
+    }
+
+    a:target {
+        color: #f06c64;
     }
 }
 
