--- a/sass/style.css
+++ b/sass/style.css
@@ -111,6 +111,7 @@ body {
   transition: all 0.3s;
 }
 .navigation a {
+  display: block;
   text-decoration: none;
   color: #FFFFFF;
   cursor: pointer;
@@ -119,6 +120,9 @@ body {
   color: #f06c64;
 }
 .navigation a:not(.active):hover {
+  color: #f06c64;
+}
+.navigation a:target {
   color: #f06c64;
 }
 
