feat: satrt for new, change naming in slider-block, change skript for slider-block, change Slide-1 (One image)

--- a/sass/layouts/body.scss
+++ b/sass/layouts/body.scss
@@ -1,6 +1,6 @@
 body {
     // max-width: 1020px;
-    position: relative;
+    // position: relative;
     background-color: $color-primary;
     margin: auto;
     padding: 0;
