--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -1,87 +1,99 @@
 // Styles for Slider-block
 
 .slider {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
+}
+
+.slider__wrapper {
+  display: flex;
+  transition: transform 0.6s ease;
   }
 
-  .slider__wrapper {
-    // position: absolute;
-    display: flex;
-    transition: transform 0.6s ease;
-  }
-
-  .slider__item {
-    width: auto;
-    height: 594px;
-  }
-
+.slider__item {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
 
 // Styles for Slide-Red-1
 
 .slide-1 {
-    width: 1020px;
-    height: 588px;
-    background-color: $color-bg-slider1;
-    border-bottom: 6px solid $color-border-slider1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.phone_vertical {
-    display: inline-block;
-    line-height: 0;
-    padding-left: 111px;
-}
-
-.phone_horizontal {
-    display: inline-block;
-    line-height: 0;
-    padding-right: 112px;
+  width: 100%;
+  height: 588px;
+  border-bottom: 6px solid $color-border-slider1;
+  display: inline-block;
+  line-height: 0;
+  background-image: url('../img/slide-1/Slide-1.svg');
+  background-color: $color-bg-slider1;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  overflow: hidden;
+  z-index: 0;
 }
 
 // Styles for Slide-Blue-2
 
 .slide-2 {
-    width: 1020px;
-    height: 594px;
-    display: inline-block;
-    line-height: 0;
-    background-image: url('../img/slide-2/Slide-2.svg');
-    background-repeat: no-repeat;
-    background-position: bottom;
-    overflow: hidden;
+  width: 100%;
+  height: 594px;
+  display: inline-block;
+  line-height: 0;
+  background-image: url('../img/slide-2/Slide-2.svg');
+  background-color: $color-bg-slider2;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  overflow: hidden;
+  z-index: 0;
 }
 
   // Styles for control-buttons
 
-  .slider_control {
-    position: absolute;
-    width: 92%;
-    right: 4%;
-    top: 50%;
-    display: flex;
-    align-items:inherit;
-    justify-content: space-between;
-    transform: translateY(-50%);
-  }
+.slider__control {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  // color: #fff;
+  text-align: center;
+  opacity: 0.5;
+  height: 50px;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, .5);
+  z-index: 10;
+}
 
-  .slider__control_left {
-    left: 0;
-    // padding-left: 40px;
-  }
+.slider__control:hover,
+.slider__control:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: .9;
+}
 
-  .slider__control_right {
-    right: 0;
-    // padding-right: 40px;
-  }
+.slider__control_left {
+  left: 31%;
+}
+
+.slider__control_right {
+  right: 31%;
+}
+
+  // .slider__control::before {
+  //   content: '';
+  //   display: inline-block;
+  //   width: 16px;
+  //   height: 27px;
+  //   background: transparent no-repeat center center;
+  //   background-size: 100% 100%;
+  // }
 
   .slider__control::before {
     content: '';
     display: inline-block;
-    width: 16px;
-    height: 27px;
+    width: 20px;
+    height: 20px;
     background: transparent no-repeat center center;
     background-size: 100% 100%;
   }
