--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -1,7 +1,9 @@
 .header {
     width: 100%;
+    // margin-top: 94px;
     // height: 89px;
     position: sticky;
+    // position: fixed;
     left: 0;
     right: 0;
     top: 0;
@@ -19,7 +21,7 @@
     justify-content: space-between;
 }
 
-.site_name__wrapper {
+.site_name_wrapper {
     margin: 0;
     padding: 0;
     display: flex;
