--- a/sass/style.css
+++ b/sass/style.css
@@ -54,7 +54,6 @@ ul {
 }
 
 body {
-  position: relative;
   background-color: ​ #f2f2f2;
   margin: auto;
   padding: 0;
@@ -80,7 +79,7 @@ body {
   justify-content: space-between;
 }
 
-.site_name__wrapper {
+.site_name_wrapper {
   margin: 0;
   padding: 0;
   display: flex;
@@ -298,67 +297,73 @@ body {
 }
 
 .slider__item {
-  width: auto;
-  height: 594px;
+  flex: 0 0 100%;
+  max-width: 100%;
 }
 
 .slide-1 {
-  width: 1020px;
+  width: 100%;
   height: 588px;
-  background-color: #f06c64;
   border-bottom: 6px solid #EA676B;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.phone_vertical {
   display: inline-block;
   line-height: 0;
-  padding-left: 111px;
-}
-
-.phone_horizontal {
-  display: inline-block;
-  line-height: 0;
-  padding-right: 112px;
+  background-image: url("../img/slide-1/Slide-1.svg");
+  background-color: #f06c64;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .slide-2 {
-  width: 1020px;
+  width: 100%;
   height: 594px;
   display: inline-block;
   line-height: 0;
   background-image: url("../img/slide-2/Slide-2.svg");
+  background-color: #648bf0;
   background-repeat: no-repeat;
   background-position: bottom;
   overflow: hidden;
+  z-index: 0;
 }
 
-.slider_control {
+.slider__control {
   position: absolute;
-  width: 92%;
-  right: 4%;
   top: 50%;
   display: flex;
-  align-items: inherit;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  text-align: center;
+  opacity: 0.5;
+  height: 50px;
   transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+
+.slider__control:hover,
+.slider__control:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: 0.9;
 }
 
 .slider__control_left {
-  left: 0;
+  left: 31%;
 }
 
 .slider__control_right {
-  right: 0;
+  right: 31%;
 }
 
 .slider__control::before {
   content: "";
   display: inline-block;
-  width: 16px;
-  height: 27px;
+  width: 20px;
+  height: 20px;
   background: transparent no-repeat center center;
   background-size: 100% 100%;
 }
