refactor: add new formating with section-tag, change project formating, change position of slider-control-buttons

--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -2,8 +2,7 @@
     width: 100%;
     // margin-top: 94px;
     // height: 89px;
-    position: sticky;
-    // position: fixed;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
