--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "layouts/body.scss";
 @import "layouts/header.scss";
 @import "layouts/footer.scss";
+@import "layouts/main.scss";
 
 
 //Components
