--- a/sass/components/our-services.scss
+++ b/sass/components/our-services.scss
@@ -1,4 +1,4 @@
-.our-services {
+.services {
     background-color: #f2f2f2;;
     border-bottom: 6px solid $color-white;
 }
@@ -32,6 +32,7 @@
     margin: 0;
     font-size: 1.2rem;
     text-align: justify;
+    max-height: 72px;
     overflow: hidden;
 }
 
