--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -1,73 +1,52 @@
 // Styles for Slider-block
+#slider {
+  padding-top: 95px;
+}
 
-.slider {
+.slider-container {
+  width: 1020px;
+
+  margin: 0 auto;
   position: relative;
   overflow: hidden;
 }
 
-.slider__wrapper {
-  display: flex;
-  transition: transform 0.6s ease;
-  }
-
-.slider__item {
-  flex: 0 0 100%;
+.carousel-slides {
   max-width: 100%;
+  position: relative;
+
+  left: 0;
+  top: 0;
 }
 
-// Styles for Slide-Red-1
+.slide {
+  max-width: 1020px;
 
-.slide-1 {
-  width: 100%;
-  height: 588px;
-  border-bottom: 6px solid $color-border-slider1;
-  display: inline-block;
-  line-height: 0;
-  background-image: url('../img/slide-1/Slide-1.svg');
-  background-color: $color-bg-slider1;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  overflow: hidden;
-  z-index: 0;
+  position: absolute;
+  top: 0;
 }
 
-// Styles for Slide-Blue-2
 
-.slide-2 {
-  width: 100%;
-  height: 594px;
-  display: inline-block;
-  line-height: 0;
-  background-image: url('../img/slide-2/Slide-2.svg');
-  background-color: $color-bg-slider2;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  overflow: hidden;
-  z-index: 0;
-}
-
-  // Styles for control-buttons
+// Styles for control-buttons
 
 .slider__control {
   position: absolute;
+  display: inline-flex;
   top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  // color: #fff;
-  text-align: center;
-  opacity: 0.5;
-  height: 50px;
   transform: translateY(-50%);
+  align-items: center;
+  justify-content: space-between;
+  height: 30px;
+  width: 20px;
+  opacity: 0.5;
   background: rgba(0, 0, 0, .5);
-  z-index: 10;
 }
 
 .slider__control:hover,
 .slider__control:focus {
-  color: #fff;
-  text-decoration: none;
+  height: 50px;
+  width: 30px;
+  transition: transform .5s;
   outline: 0;
   opacity: .9;
 }
@@ -80,28 +59,20 @@
   right: 5%;
 }
 
-  // .slider__control::before {
-  //   content: '';
-  //   display: inline-block;
-  //   width: 16px;
-  //   height: 27px;
-  //   background: transparent no-repeat center center;
-  //   background-size: 100% 100%;
-  // }
 
-  .slider__control::before {
-    content: '';
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: transparent no-repeat center center;
-    background-size: 100% 100%;
-  }
+.slider__control::before {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: transparent no-repeat center center;
+  background-size: 100% 100%;
+}
 
-  .slider__control_left::before {
-    background-image: url('../img/svg/slider-arows/arrow-left.svg');
-  }
+.slider__control_left::before {
+  background-image: url('../img/svg/slider-arows/arrow-left.svg');
+}
 
-  .slider__control_right::before {
-    background-image: url('../img/svg/slider-arows/arrow-right.svg');
-  }
+.slider__control_right::before {
+  background-image: url('../img/svg/slider-arows/arrow-right.svg');
+}
