--- a/sass/style.css
+++ b/sass/style.css
@@ -48,14 +48,14 @@ ul {
 }
 
 .wrapper {
-  max-width: 1020px;
+  max-width: 936px;
   margin: auto;
   position: relative;
 }
 
 body {
   background-color: ​ #f2f2f2;
-  margin: auto;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -139,7 +139,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1020px;
   padding: 22px 0;
 }
 
@@ -156,10 +155,6 @@ body {
 .svg:hover {
   filter: inherit;
   fill: #DEDEDE;
-}
-
-#home {
-  padding-top: 89px;
 }
 
 .portfolio {
@@ -239,7 +234,7 @@ body {
   height: auto;
 }
 
-.our-services {
+.services {
   background-color: #f2f2f2;
   border-bottom: 6px solid #FFFFFF;
 }
@@ -274,6 +269,7 @@ body {
   margin: 0;
   font-size: 1.2rem;
   text-align: justify;
+  max-height: 72px;
   overflow: hidden;
 }
 
@@ -290,67 +286,48 @@ body {
   justify-content: space-between;
 }
 
-.slider {
+#slider {
+  padding-top: 95px;
+}
+
+.slider-container {
+  width: 1020px;
+  margin: 0 auto;
   position: relative;
   overflow: hidden;
 }
 
-.slider__wrapper {
-  display: flex;
-  transition: transform 0.6s ease;
-}
-
-.slider__item {
-  flex: 0 0 100%;
+.carousel-slides {
   max-width: 100%;
+  position: relative;
+  left: 0;
+  top: 0;
 }
 
-.slide-1 {
-  width: 100%;
-  height: 588px;
-  border-bottom: 6px solid #EA676B;
-  display: inline-block;
-  line-height: 0;
-  background-image: url("../img/slide-1/Slide-1.svg");
-  background-color: #f06c64;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  overflow: hidden;
-  z-index: 0;
-}
-
-.slide-2 {
-  width: 100%;
-  height: 594px;
-  display: inline-block;
-  line-height: 0;
-  background-image: url("../img/slide-2/Slide-2.svg");
-  background-color: #648bf0;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  overflow: hidden;
-  z-index: 0;
+.slide {
+  max-width: 1020px;
+  position: absolute;
+  top: 0;
 }
 
 .slider__control {
   position: absolute;
+  display: inline-flex;
   top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  text-align: center;
-  opacity: 0.5;
-  height: 50px;
   transform: translateY(-50%);
+  align-items: center;
+  justify-content: space-between;
+  height: 30px;
+  width: 20px;
+  opacity: 0.5;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 10;
 }
 
 .slider__control:hover,
 .slider__control:focus {
-  color: #fff;
-  text-decoration: none;
+  height: 50px;
+  width: 30px;
+  transition: transform 0.5s;
   outline: 0;
   opacity: 0.9;
 }
