--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -1,78 +1,48 @@
 // Styles for Slider-block
 #slider {
-  padding-top: 95px;
+  margin-top: 77px;
+  background: $color-bg-slider1;
 }
 
 .slider-container {
-  width: 1020px;
-
-  margin: 0 auto;
   position: relative;
+  max-width: 1020px;
+  margin: 0 auto;
   overflow: hidden;
 }
 
-.carousel-slides {
-  max-width: 100%;
-  position: relative;
-
-  left: 0;
-  top: 0;
+.slider-line {
+  display: flex;
+  align-items: baseline;
+  transition: all ease .5s;
 }
-
-.slide {
-  max-width: 1020px;
-
-  position: absolute;
-  top: 0;
-}
-
 
 // Styles for control-buttons
 
-.slider__control {
+.btn-container {
   position: absolute;
-  display: inline-flex;
+  display: flex;
   top: 50%;
   transform: translateY(-50%);
   align-items: center;
   justify-content: space-between;
   height: 30px;
-  width: 20px;
+  width: 100%;
   opacity: 0.5;
   background: rgba(0, 0, 0, .5);
 }
 
-.slider__control:hover,
-.slider__control:focus {
-  height: 50px;
-  width: 30px;
-  transition: transform .5s;
-  outline: 0;
-  opacity: .9;
+.btn {
+  height: 30px;
+  width: 90px;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
-.slider__control_left {
-  left: 5%;
-}
-
-.slider__control_right {
-  right: 5%;
-}
-
-
-.slider__control::before {
-  content: '';
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.slider__control_left::before {
+#left {
   background-image: url('../img/svg/slider-arows/arrow-left.svg');
 }
 
-.slider__control_right::before {
+#right {
   background-image: url('../img/svg/slider-arows/arrow-right.svg');
 }
