--- a/sass/layouts/body.scss
+++ b/sass/layouts/body.scss
@@ -1,5 +1,8 @@
 body {
     background-color: $color-primary;
-    margin: 0 auto;
+    margin-top: 77px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
     padding: 0;
 }
