--- a/sass/style.css
+++ b/sass/style.css
@@ -55,7 +55,10 @@ ul {
 
 body {
   background-color: ​ #f2f2f2;
-  margin: 0 auto;
+  margin-top: 77px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
   padding: 0;
 }
 
@@ -287,7 +290,6 @@ body {
 }
 
 #slider {
-  margin-top: 77px;
   background: #f06c64;
 }
 
@@ -326,7 +328,6 @@ body {
 
 #left {
   background-image: url("../img/svg/slider-arows/arrow-left.svg");
-  overflow: hidden;
 }
 
 #right {
