--- a/sass/layouts/body.scss
+++ b/sass/layouts/body.scss
@@ -1,9 +1,6 @@
 body {
     background-color: $color-primary;
-    margin-top: 77px;
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 0;
+    margin: 0 auto;
     padding: 0;
     scroll-behavior: smooth;
 }
