--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,15 +1,13 @@
 html {
     font-family: 'Lato', sans-serif;
     font-size: 10px;
-    padding-top: 77px; //отступ для плашки
-    scroll-padding-top: 77px;
+    padding-top: 77px; // отступ для плашки, из боди - не работает!!!!!
+    scroll-padding-top: 77px; // сдвиг скрола для плашки
 }
 
 body {
     font-size: 1.6rem;
     color: #767e9e;
-    // padding-top: 77px; //отступ для плашки - из body - не работает
-    // scroll-padding-top: 77px;  //
 }
 
 h1 {
