--- a/sass/style.css
+++ b/sass/style.css
@@ -50,9 +50,23 @@ ul {
 }
 
 .wrapper {
-  max-width: 936px;
+  max-width: 1020px;
   margin: auto;
-  position: relative;
+}
+@media (max-width: 1020px) {
+  .wrapper {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 768px) {
+  .wrapper {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 375px) {
+  .wrapper {
+    padding: 0 30px;
+  }
 }
 
 body {
@@ -72,6 +86,11 @@ body {
   background-color: #2D303A;
   color: #FFFFFF;
   border-bottom: 6px solid #323746;
+}
+@media (max-width: 375px) {
+  .header {
+    height: 71px;
+  }
 }
 
 .header__wrapper {
@@ -100,6 +119,44 @@ body {
   font-weight: bold;
 }
 
+.hamburger-line, .hamburger::after, .hamburger::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  background: #173A56;
+  border-radius: 5px;
+  width: 100%;
+  height: 2.4px;
+}
+
+.hamburger {
+  display: none;
+  position: relative;
+  height: 20px;
+  width: 25px;
+}
+@media (max-width: 375px) {
+  .hamburger {
+    display: inline-block;
+    margin-right: 103px;
+    margin-left: 20px;
+  }
+}
+.hamburger::before {
+  top: 0;
+  left: 0;
+}
+.hamburger::after {
+  bottom: 0;
+  left: 0;
+}
+
+.hamburger-line {
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+}
+
 .navigation {
   padding: 15px 0 0 0;
   display: flex;
@@ -113,22 +170,25 @@ body {
   letter-spacing: -0.035em;
   transition: all 0.3s;
 }
-
-a {
+.navigation a {
   text-decoration: none;
   color: #FFFFFF;
 }
-
-.active {
+.navigation .active {
   color: #f06c64;
 }
-
-a:not(.active):hover {
+.navigation a:not(.active):hover {
   color: #f06c64;
 }
 
 .navigation :first-child {
   list-style: none;
+}
+
+@media (max-width: 375px) {
+  .header__navigation {
+    display: none;
+  }
 }
 
 .footer {
@@ -140,7 +200,8 @@ a:not(.active):hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 22px 0;
+  padding-top: 22px;
+  padding-bottom: 22px;
 }
 
 .ico-networks {
