--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,7 @@
-﻿@import "abstract/constants.scss";
+﻿//Abstracts
+@import "abstract/constants.scss";
+@import "abstract/mixins.scss";
+
 @import "base/base.scss";
 
 //Layouts
