--- a/sass/abstract/constants.scss
+++ b/sass/abstract/constants.scss
@@ -10,6 +10,7 @@ $color-heading: #666d89;
 $color-border: #767e9e;
 $color-border-hover: #DEDEDE;
 $color-white: #FFFFFF;
+$color-burger-bg-line: #173A56;
 
 $content-width: 1020px;
 $tablet-width: 768px;
