--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -6,7 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 22px 0;
+    padding-top: 22px;
+    padding-bottom: 22px;
 }
 
 .ico-networks {
