--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -8,6 +8,9 @@
     background-color: $color-bg-header;
     color: $color-white;
     border-bottom: 6px solid $color-border-blue;
+    @include media-mobile {
+        height: 71px;
+    }
 }
 
 .header__wrapper {
@@ -38,6 +41,47 @@
 
 // navigation-Menu
 
+%hamburger-line {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    background: $color-burger-bg-line;
+    border-radius: 5px;
+    width: 100%;
+    height: 2.4px;
+}
+
+.hamburger {
+    display: none;
+    position: relative;
+    height: 20px;
+    width: 25px;
+    @include media-mobile {
+        display: inline-block;
+        margin-right: 103px;
+        margin-left: 20px;
+    }
+
+    &::before {
+       @extend %hamburger-line;
+       top: 0;
+       left: 0;
+    }
+
+    &::after {
+        @extend %hamburger-line;
+        bottom: 0;
+        left: 0;
+     }
+}
+
+.hamburger-line {
+    @extend %hamburger-line;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+}
+
 .navigation {
     padding: 15px 0 0 0;
     display: flex;
@@ -50,27 +94,35 @@
     text-align: right;
     letter-spacing: -0.035em;
     transition: all 0.3s;
-}
 
-a {
+    a {
     // display: block;
     text-decoration: none;
     color: $color-white;
     // cursor: pointer;
-}
+    }
 
-.active {
+    .active {
     color: #f06c64;
-}
+    }
 
-a:not(.active):hover {
+    a:not(.active):hover {
     color:  #f06c64;
+    }
+
+//  a:target {
+//     color: #f06c64;
+//  }
+
 }
 
-// a:target {
-//     color: #f06c64;
-// }
 
 .navigation :first-child {
     list-style: none;
+}
+
+.header__navigation {
+    @include media-mobile {
+        display: none;
+    }
 }
