refactor: finish respons for desctop-tablet-mobile, start for portfolio-button - click-randomize

--- a/sass/components/our-services.scss
+++ b/sass/components/our-services.scss
@@ -10,6 +10,7 @@
 
 .our-service__text {
     margin: 0;
+    font-size: 1.8rem;
     line-height: 30px;
     padding-top: 12px;
     padding-bottom: 60px;
@@ -41,6 +42,20 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     padding-bottom: 46px;
+
+    @include media-tablet {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        padding-bottom: 46px;
+    }
+
+    @include media-mobile {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
 }
 
 .wrapper_layout {
