--- a/sass/components/portfolio.scss
+++ b/sass/components/portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio {
+#portfolio {
     background-attachment: contain;
     background-color: $color-bg-portfolio;
     border-bottom: 6px solid $color-border-blue;
@@ -17,15 +17,14 @@
 // PORTFOLIO-menu styles
 
 .button_portfolio {
-    padding: 10px 0;
+    padding: 18px 0;
     display: flex;
-    :active,:hover,:focus{outline:0;outline-offset:0}  //off- all buttons browser-styles
-
 }
 
 .button_borderd {
     list-style: none;
     font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
     color: $color-border;
     border: 1px solid $color-border;
     box-sizing: border-box;
@@ -35,8 +34,6 @@
 }
 
 .button_borderd_active {
-    :active,:hover,:focus{outline:0;outline-offset:0}
-    list-style: none;
     color: $color-border-hover;
     border: 1px solid $color-border-hover;
     box-sizing: border-box;
@@ -50,7 +47,6 @@
     border: 1px solid $color-border-hover;
 }
 
-
 .button_portfolio__item {
     :active,:hover,:focus{outline:0;outline-offset:0}  //off- all buttons browser-styles
     padding: 0 10px 0 0;
@@ -59,18 +55,41 @@
 // Portfolio-images array styles
 
 .portfolio_images {
-    list-style: none;
-    margin: 0;
-    padding: 0;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 20px;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 20px;
+    height: auto;
+    padding-bottom: 68px;
+
+    @include media-tablet {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 19.5px;
+        height: auto;
+        padding-bottom: 46px;
+
+    }
+
+    @include media-mobile {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 13px;
+        height: auto;
+        padding-bottom: 46px;
+    }
+
+
 }
 
-.portfolio_images__item {
-    list-style: none;
-    width: auto;
-    height: auto;
+
+.image {
+    display: block; // for place image in div without margin/padding
+    line-height: 0; // for delete margin-for alt text (*of img in div)
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
 }
