--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -7,7 +7,7 @@
   position: relative;
   max-width: 1020px;
   margin: 0 auto;
-  margin-bottom: -4px; // Обрезал контейнер - т.к. картинки - не одинаковые по высоте
+  margin-bottom: -4px; // Cut "slider-container" (because slider-images are different heights for 4px)
   overflow: hidden;
 }
 
