--- a/sass/style.css
+++ b/sass/style.css
@@ -181,7 +181,7 @@ body {
   color: #f06c64;
 }
 
-.navigation :first-child {
+.navigation:first-child {
   list-style: none;
 }
 
@@ -219,7 +219,13 @@ body {
   fill: #DEDEDE;
 }
 
-.portfolio {
+@media (max-width: 375px) {
+  .copyright {
+    display: none;
+  }
+}
+
+#portfolio {
   background-attachment: contain;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
@@ -236,17 +242,14 @@ body {
 }
 
 .button_portfolio {
-  padding: 10px 0;
+  padding: 18px 0;
   display: flex;
-}
-.button_portfolio :active, .button_portfolio :hover, .button_portfolio :focus {
-  outline: 0;
-  outline-offset: 0;
 }
 
 .button_borderd {
   list-style: none;
   font-family: "Lato", sans-serif;
+  font-size: 1.2rem;
   color: #767e9e;
   border: 1px solid #767e9e;
   box-sizing: border-box;
@@ -256,17 +259,12 @@ body {
 }
 
 .button_borderd_active {
-  list-style: none;
   color: #DEDEDE;
   border: 1px solid #DEDEDE;
   box-sizing: border-box;
   border-radius: 5px;
   background-color: #2d303a;
   cursor: pointer;
-}
-.button_borderd_active :active, .button_borderd_active :hover, .button_borderd_active :focus {
-  outline: 0;
-  outline-offset: 0;
 }
 
 .button_borderd:not(.active):hover {
@@ -283,19 +281,38 @@ body {
 }
 
 .portfolio_images {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-column-gap: 20px;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 20px;
+  height: auto;
+  padding-bottom: 68px;
+}
+@media (max-width: 768px) {
+  .portfolio_images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 19.5px;
+    height: auto;
+    padding-bottom: 46px;
+  }
+}
+@media (max-width: 375px) {
+  .portfolio_images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 13px;
+    height: auto;
+    padding-bottom: 46px;
+  }
 }
 
-.portfolio_images__item {
-  list-style: none;
-  width: auto;
+.image {
+  display: block;
+  line-height: 0;
+}
+.image img {
+  max-width: 100%;
   height: auto;
 }
 
@@ -311,6 +328,7 @@ body {
 
 .our-service__text {
   margin: 0;
+  font-size: 1.8rem;
   line-height: 30px;
   padding-top: 12px;
   padding-bottom: 60px;
@@ -343,6 +361,21 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
   padding-bottom: 46px;
+}
+@media (max-width: 768px) {
+  .layout-2-span-3-column__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding-bottom: 46px;
+  }
+}
+@media (max-width: 375px) {
+  .layout-2-span-3-column__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
 }
 
 .wrapper_layout {
