--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: $color-bg-portfolio;
 }
+
 .footer__wrapper {
     margin: 0 auto;
     display: flex;
@@ -8,6 +9,11 @@
     justify-content: space-between;
     padding-top: 22px;
     padding-bottom: 22px;
+
+    @include media-mobile {
+        justify-content: center;
+
+    }
 }
 
 .ico-networks {
