--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -19,6 +19,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include media-mobile {
+        justify-content: start;
+    }
 }
 
 .site_name_wrapper {
@@ -26,6 +30,14 @@
     padding: 0;
     display: flex;
     align-items: center;
+
+    @include media-mobile {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 .site__name {
@@ -56,9 +68,10 @@
     position: relative;
     height: 20px;
     width: 25px;
+
     @include media-mobile {
         display: inline-block;
-        margin-right: 103px;
+        margin-right: 49px;
         margin-left: 20px;
     }
 
@@ -72,7 +85,7 @@
         @extend %hamburger-line;
         bottom: 0;
         left: 0;
-     }
+    }
 }
 
 .hamburger-line {
