--- a/sass/style.css
+++ b/sass/style.css
@@ -100,12 +100,26 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 375px) {
+  .header__wrapper {
+    justify-content: start;
+  }
+}
 
 .site_name_wrapper {
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
+}
+@media (max-width: 375px) {
+  .site_name_wrapper {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .site__name {
@@ -138,7 +152,7 @@ body {
 @media (max-width: 375px) {
   .hamburger {
     display: inline-block;
-    margin-right: 103px;
+    margin-right: 49px;
     margin-left: 20px;
   }
 }
@@ -203,6 +217,11 @@ body {
   padding-top: 22px;
   padding-bottom: 22px;
 }
+@media (max-width: 375px) {
+  .footer__wrapper {
+    justify-content: center;
+  }
+}
 
 .ico-networks {
   display: flex;
@@ -229,6 +248,11 @@ body {
   background-attachment: contain;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+}
+@media (max-width: 375px) {
+  #portfolio {
+    border-bottom: none;
+  }
 }
 
 .portfolio__title {
@@ -288,6 +312,10 @@ body {
   height: auto;
   padding-bottom: 68px;
 }
+.portfolio_images img {
+  max-width: 100%;
+  height: auto;
+}
 @media (max-width: 768px) {
   .portfolio_images {
     display: grid;
@@ -303,17 +331,18 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 13px;
     height: auto;
-    padding-bottom: 46px;
+    padding-bottom: 42px;
   }
 }
 
-.image {
-  display: block;
-  line-height: 0;
+.portfolio_images img:nth-child(1n+13) {
+  display: none;
 }
-.image img {
-  max-width: 100%;
-  height: auto;
+
+@media (max-width: 375px) {
+  .portfolio_images img:nth-child(1n+9) {
+    display: none;
+  }
 }
 
 .services {
@@ -395,6 +424,11 @@ body {
   margin-bottom: -4px;
   overflow: hidden;
 }
+@media (max-width: 375px) {
+  .slider {
+    margin-top: -6px;
+  }
+}
 
 .slider-line {
   display: flex;
@@ -414,6 +448,13 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   opacity: 0.5;
+}
+@media (max-width: 375px) {
+  .btn-container {
+    width: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 }
 
 .btn {
