feat: do highlight for footer-menu links, add optional sizing for mixin (for normal sizing in my phone-size), change slider button size for mobile-size, change project-name (singolo.html -> index.html)

--- a/sass/abstract/constants.scss
+++ b/sass/abstract/constants.scss
@@ -14,4 +14,6 @@ $color-burger-bg-line: #173A56;
 
 $content-width: 1020px;
 $tablet-width: 768px;
+$tablet-width-min: 650px;
+$mobile-width-max: 460px;
 $mobile-width: 375px;
