--- a/sass/components/portfolio.scss
+++ b/sass/components/portfolio.scss
@@ -2,6 +2,11 @@
     background-attachment: contain;
     background-color: $color-bg-portfolio;
     border-bottom: 6px solid $color-border-blue;
+
+    @include media-mobile-max {
+        border-bottom: none;
+    }
+
     @include media-mobile {
         border-bottom: none;
     }
@@ -53,6 +58,10 @@
 .button_portfolio__item {
     :active,:hover,:focus{outline:0;outline-offset:0}  //off- all buttons browser-styles
     padding: 0 10px 0 0;
+}
+
+.button_portfolio__item:last-child {
+    padding: 0;
 }
 
 // Portfolio-images array styles
