--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -9,6 +9,8 @@
   margin: 0 auto;
   margin-bottom: -4px; // Cut "slider-container" (because slider-images are different heights for 4px)
   overflow: hidden;
+
+
   @include media-mobile {
     margin-top: -6px;
   }
@@ -52,6 +54,11 @@
   border-radius: 5px;
   cursor: pointer;
 
+  @include media-mobile {
+    height: 24px;
+    width: 24px;
+  }
+
 
 }
 
@@ -61,6 +68,12 @@
   width: 40px;
   border: 3px solid $color-border-hover;
   transition: all ease .5s;
+
+  @include media-mobile {
+    height: 30px;
+    width: 30px;
+  }
+
 }
 
 #left {
