--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -8,6 +8,11 @@
     background-color: $color-bg-header;
     color: $color-white;
     border-bottom: 6px solid $color-border-blue;
+
+    @include media-tablet-min {
+
+    }
+
     @include media-mobile {
         height: 71px;
     }
@@ -20,6 +25,10 @@
     align-items: center;
     justify-content: space-between;
 
+    @include media-tablet-min {
+        justify-content: start;
+    }
+
     @include media-mobile {
         justify-content: start;
     }
@@ -30,6 +39,10 @@
     padding: 0;
     display: flex;
     align-items: center;
+
+    @include media-tablet-min {
+
+    }
 
     @include media-mobile {
         margin: 0;
@@ -68,6 +81,12 @@
     position: relative;
     height: 20px;
     width: 25px;
+
+    @include media-tablet-min {
+        display: inline-block;
+        margin-right: 49px;
+        margin-left: 20px;
+    }
 
     @include media-mobile {
         display: inline-block;
@@ -135,6 +154,11 @@
 }
 
 .header__navigation {
+
+    @include media-tablet-min {
+        display: none;
+    }
+
     @include media-mobile {
         display: none;
     }
