--- a/sass/style.css
+++ b/sass/style.css
@@ -100,6 +100,11 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 650px) {
+  .header__wrapper {
+    justify-content: start;
+  }
+}
 @media (max-width: 375px) {
   .header__wrapper {
     justify-content: start;
@@ -148,6 +153,13 @@ body {
   position: relative;
   height: 20px;
   width: 25px;
+}
+@media (max-width: 650px) {
+  .hamburger {
+    display: inline-block;
+    margin-right: 49px;
+    margin-left: 20px;
+  }
 }
 @media (max-width: 375px) {
   .hamburger {
@@ -199,6 +211,11 @@ body {
   list-style: none;
 }
 
+@media (max-width: 650px) {
+  .header__navigation {
+    display: none;
+  }
+}
 @media (max-width: 375px) {
   .header__navigation {
     display: none;
@@ -230,12 +247,20 @@ body {
 }
 
 .ico-networks__link {
+  display: flex;
   padding-right: 8px;
 }
 
-.svg:hover {
-  filter: inherit;
-  fill: #DEDEDE;
+.ico-networks__link:last-child {
+  padding: 0;
+}
+
+.svg {
+  transition: 0.8s;
+}
+
+:hover.svg {
+  filter: brightness(1.5);
 }
 
 @media (max-width: 375px) {
@@ -248,6 +273,11 @@ body {
   background-attachment: contain;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+}
+@media (max-width: 460px) {
+  #portfolio {
+    border-bottom: none;
+  }
 }
 @media (max-width: 375px) {
   #portfolio {
@@ -302,6 +332,10 @@ body {
 .button_portfolio__item :active, .button_portfolio__item :hover, .button_portfolio__item :focus {
   outline: 0;
   outline-offset: 0;
+}
+
+.button_portfolio__item:last-child {
+  padding: 0;
 }
 
 .portfolio_images {
@@ -399,6 +433,13 @@ body {
     padding-bottom: 46px;
   }
 }
+@media (max-width: 460px) {
+  .layout-2-span-3-column__wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
 @media (max-width: 375px) {
   .layout-2-span-3-column__wrapper {
     display: grid;
@@ -465,6 +506,12 @@ body {
   border-radius: 5px;
   cursor: pointer;
 }
+@media (max-width: 375px) {
+  .btn {
+    height: 24px;
+    width: 24px;
+  }
+}
 
 .btn:hover {
   display: inline-block;
@@ -472,6 +519,12 @@ body {
   width: 40px;
   border: 3px solid #DEDEDE;
   transition: all ease 0.5s;
+}
+@media (max-width: 375px) {
+  .btn:hover {
+    height: 30px;
+    width: 30px;
+  }
 }
 
 #left {
